--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     },
     "homepage": "https://github.com/Brittany-Hasty/loot#readme",
     "dependencies": {
+        "aws-sdk": "^2.674.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.13",
+        "multer": "^1.4.2",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
         "validator": "^13.0.0"
