--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "scripts": {
         "start": "node app.js",
         "server": "nodemon app.js",
-        "server:debug": "nodemon --inspect app.js"
+        "server:debug": "nodemon --inspect app.js",
+        "frontend-install": "npm install --prefix frontend",
+        "frontend": "npm start --prefix frontend",
+        "dev": "concurrently \"npm run server\" \"npm run frontend\"",
+        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
     },
     "repository": {
         "type": "git",
@@ -22,12 +26,17 @@
         "aws-sdk": "^2.674.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "concurrently": "^5.2.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
+        "jwt-decode": "^2.2.0",
         "mongoose": "^5.9.13",
         "multer": "^1.4.2",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
+        "react-redux": "^7.2.0",
+        "react-router-dom": "^5.1.2",
+        "redux": "^4.0.5",
         "validator": "^13.0.0"
     },
     "devDependencies": {
