--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
         "multer": "^1.4.2",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
+        "react": "^16.13.1",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
+        "react-scripts": "^3.4.1",
         "redux": "^4.0.5",
         "validator": "^13.0.0"
     },
