--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "jwt-decode": "^2.2.0",
         "mongoose": "^5.9.13",
         "multer": "^1.4.2",
+        "multer-s3": "^2.9.0",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
         "react": "^16.13.1",
