--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
         "react-router-dom": "^5.1.2",
         "react-scripts": "^3.4.1",
         "redux": "^4.0.5",
-        "validator": "^13.0.0"
+        "validator": "^13.0.0",
+        "yargs-parser": "^18.1.3"
     },
     "devDependencies": {
         "nodemon": "^2.0.3"
