--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
         "react": "^16.13.1",
+        "react-ga": "^3.1.2",
         "react-redux": "^7.2.1",
         "react-router-dom": "^5.1.2",
         "react-scripts": "^3.4.3",
